--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <title>Document.</title>
 </head>
 <body>
+      <!-- Este es el login -->
     <form name="frm_login" id="frm_login" method="post" action="httpd://mail.google.com/">
         <input type="text" name="txt_user" id="txt_user" maxlength="10">
         <input type="password" name="txt_pass" id="txt_pass" maxlength="20">
